--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,34 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipe Index Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="card border-warning">
-    <div class="card-header text-bg-warning">
-        <h2 class="card-title" th:text="'List of Recipes'">List of Recipes</h2>
+<main>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <span class="fs-4">Simple header</span>
+            </a>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            </ul>
+        </header>
     </div>
-    <div class="card-body">
-        <table id="recipes" class="table table-hover">
-            <thead>
-            <tr>
-                <th>ID</th>
-                <th style="width: 150px;">Description</th>
-                <th style="width: 150px;">Difficulty</th>
-                <th style="width: 200px;">PrepTime</th>
-                <th style="width: 120px">CookTime</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="recipe : ${recipes}">
-                <td th:text="${recipe.id}"></td>
-                <td th:text="${recipe.description}"></td>
-                <td th:text="${recipe.difficulty}"></td>
-                <td th:text="${recipe.prepTime}"></td>
-                <td th:text="${recipe.cookTime}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <div class="card border-primary">
+                    <div class="card-header text-bg-primary">
+                        <h2 class="card-title" th:text="'List of Recipes'">List of Recipes</h2>
+                    </div>
+                    <div class="card-body">
+                        <table id="recipes" class="table">
+                            <thead>
+                            <tr>
+                                <th style="width: 60px;">ID</th>
+                                <th>Description</th>
+                                <th style="width: 150px;">Difficulty</th>
+                                <th style="width: 200px;">PrepTime</th>
+                                <th style="width: 120px">CookTime</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="recipe : ${recipes}">
+                                <td th:text="${recipe.id}"></td>
+                                <td th:text="${recipe.description}"></td>
+                                <td th:text="${recipe.difficulty}"></td>
+                                <td th:text="${recipe.prepTime}"></td>
+                                <td th:text="${recipe.cookTime}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</main>
 </body>
 </html>
