--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipe Index Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script th:src="@{/webjars/jquery/3.7.0/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <main>
@@ -39,6 +41,7 @@
                                 <th style="width: 150px;">Difficulty</th>
                                 <th style="width: 200px;">PrepTime</th>
                                 <th style="width: 120px">CookTime</th>
+                                <th style="width: 120px">#</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -48,6 +51,11 @@
                                 <td th:text="${recipe.difficulty}"></td>
                                 <td th:text="${recipe.prepTime}"></td>
                                 <td th:text="${recipe.cookTime}"></td>
+                                <td>
+                                    <a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}" class="btn btn-outline-success">
+                                        <i class="bi bi-search"></i>
+                                    </a>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
