Update varie: crud per recipe e ingredient

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,10 +27,14 @@
     </div>
     <div class="container mt-5">
         <div class="row">
-            <div class="col-8 offset-2">
-                <div class="card border-primary">
-                    <div class="card-header text-bg-primary">
-                        <h2 class="card-title" th:text="'List of Recipes'">List of Recipes</h2>
+            <div class="col-10 offset-1">
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="card-title">List of Recipes
+                            <a href="#" th:href="@{/recipe/new}" class="btn btn-outline-success">
+                            Add recipe <i class="bi bi-plus-circle"></i>
+                            </a>
+                        </h2>
                     </div>
                     <div class="card-body">
                         <table id="recipes" class="table">
@@ -41,7 +45,7 @@
                                 <th style="width: 150px;">Difficulty</th>
                                 <th style="width: 200px;">PrepTime</th>
                                 <th style="width: 120px">CookTime</th>
-                                <th style="width: 120px">#</th>
+                                <th style="width: 180px">#</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -49,11 +53,17 @@
                                 <td th:text="${recipe.id}"></td>
                                 <td th:text="${recipe.description}"></td>
                                 <td th:text="${recipe.difficulty}"></td>
-                                <td th:text="${recipe.prepTime}"></td>
-                                <td th:text="${recipe.cookTime}"></td>
+                                <td th:text="${recipe.prepTime} + ' min'"></td>
+                                <td th:text="${recipe.cookTime} + ' min'"></td>
                                 <td>
-                                    <a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}" class="btn btn-outline-success">
+                                    <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show' }" class="btn btn-outline-success me-2">
                                         <i class="bi bi-search"></i>
+                                    </a>
+                                    <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update' }" class="btn btn-outline-warning me-2">
+                                        <i class="bi bi-pencil-square"></i>
+                                    </a>
+                                    <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete' }" class="btn btn-outline-danger">
+                                        <i class="bi bi-x-square"></i>
                                     </a>
                                 </td>
                             </tr>
