add controller advice exception

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h2 class="card-title">List of Recipes
-                            <a href="#" th:href="@{/recipe/new}" class="btn btn-outline-success">
+                            <a href="#" th:href="@{/recipe/new}" class="btn btn-outline-success float-end mt-1">
                             Add recipe <i class="bi bi-plus-circle"></i>
                             </a>
                         </h2>
