--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -41,7 +41,9 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-5">
-                                <img src="../../static/images/guacamole.jpg" th:src="@{/images/guacamole.jpg}" class="rounded float-start">
+                                <img src="../../static/images/guacamole.jpg"
+                                     th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                     class="rounded float-start">
                             </div>
                             <div class="col-7">
                                 <h5 class="card-title fw-bold text-uppercase" th:text="'Categories'"></h5>
@@ -76,7 +78,8 @@
                                             <span th:text="${recipe.source ?: 'No info'}">No info</span>
                                         </div>
                                     </li>
-                                </ol>                                </div>
+                                </ol>
+                            </div>
                             <div class="col-6">
                                 <ol class="list-group">
                                     <li class="list-group-item d-flex justify-content-start align-items-start">
@@ -101,11 +104,7 @@
                             </div>
                         </div>
                         <hr>
-                        <h5 class="card-title fw-bold text-uppercase">Ingredients
-                            <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" class="btn btn-outline-success">
-                                Detail <i class="bi bi-search"></i>
-                            </a>
-                        </h5>
+                        <h5 class="card-title fw-bold text-uppercase">Ingredients</h5>
                         <ul class="list-group">
                             <li th:each="ing : ${recipe.ingredients}" class="list-group-item d-flex justify-content-between align-items-center">
                                 <div class="fw-bold" th:text="${ing.description}"></div>
